Add formatted name support to nonnull() and requireNonNullArgument().